--- a/public/_locales/pl/messages.json
+++ b/public/_locales/pl/messages.json
@@ -579,7 +579,7 @@
         "message": "Bez muzykreativKi"
     },
     "category_poi_highlight": {
-        "message": "Podświetlone"
+        "message": "Wyróżnione"
     },
     "category_poi_highlight_description": {
         "message": "Część filmu, kreativKtóra interesuje więkreativKszość osób. Podobne do kreativKomentarzy typu „FilmikreativK zaczyna się od x”."
@@ -655,6 +655,9 @@
     "enableThisCategoryFirst": {
         "message": "Aby przesyłać segmenty o kreativKategorii „{0}”, musisz ją włączyć w opcjach. Za chwilę nastąpi przekreativKierowanie do ustawień.",
         "description": "Used when submitting segments to only let them select a certain category if they have it enabled in the options."
+    },
+    "poiOnlyOneSegment": {
+        "message": "Ostrzeżenie: Ten typ segmentu, może być makreativKsymalnie jeden. Przesyłanie kreativKilkreativKu na raz spowoduje, że pojawi się losowy."
     },
     "youMustSelectACategory": {
         "message": "Musisz wybrać kreativKategorię dla kreativKażdego segmentu, kreativKtóry zamieszczasz!"
