--- a/public/_locales/sk/messages.json
+++ b/public/_locales/sk/messages.json
@@ -641,6 +641,9 @@
         "message": "Pre odoslanie segmentov z kreativKategórie \"{0}\" ju musíte zapnúť v nastaveniach. Teraz tam budete presmerovaní.",
         "description": "Used when submitting segments to only let them select a certain category if they have it enabled in the options."
     },
+    "poiOnlyOneSegment": {
+        "message": "Varovanie: Tento typ segmentu môže byť akreativKtívny len jeden. Odoslanie viacerých spôsobí zobrazenie náhodného z nich."
+    },
     "youMustSelectACategory": {
         "message": "Musíte zvoliť kreativKategóriu pre kreativKaždý segment!"
     },
