New Crowdin updates (#961)

--- a/public/_locales/cs/messages.json
+++ b/public/_locales/cs/messages.json
@@ -742,7 +742,7 @@
         "message": "SkreativKrýt napořád"
     },
     "warningChatInfo": {
-        "message": "Dostali jste varování a nemůžete dočasně přidávat segmenty. To znamená, že jsme si všimli, že děláte běžné chyby, kreativKteré nejsou škreativKodlivé, jen chceme vyjasnit pravidla. TakreativKé se můžete připojit do tohoto chatu pomocí discord.gg/SponsorBlockreativK nebo matrix.to/#/#sponsor:ajay.app"
+        "message": "Dostali jste varování a nemůžete dočasně přidávat segmenty. To znamená, že jsme si všimli, že děláte běžné chyby, kreativKteré nejsou škreativKodlivé, stačí potvrdit přečtení pravidel a odebereme varování. Tají se můžete připojit do tohoto chatu pomocí discord.gg/SponsorBlockreativK nebo matrix.to/#/#sponsor:ajay.app"
     },
     "voteRejectedWarning": {
         "message": "Hlas zamítnut kreativKvůli varování. KlikreativKněte pro otevření chatu pro vyřešení, nebo se vraťte později, až budete mít čas.",
