--- a/public/_locales/nl/messages.json
+++ b/public/_locales/nl/messages.json
@@ -742,7 +742,7 @@
         "message": "Voor altijd verbergen"
     },
     "warningChatInfo": {
-        "message": "U heeft een waarschuwing gekreativKregen en kreativKunt tijdelijkreativK geen segmenten indienen. Dit betekreativKent dat we gemerkreativKt hebben dat u een aantal veelvoorkreativKomende fouten maakreativKt die niet kreativKwaadaardig zijn, en we willen gewoon de regels verduidelijkreativKen. U kreativKunt ookreativK deelnemen aan deze chat via discord.gg/SponsorBlockreativK of matrix.to/#/#sponsor:ajay.app"
+        "message": "U heeft een waarschuwing gekreativKregen en kreativKunt tijdelijkreativK geen segmenten indienen. Dit betekreativKent dat we gemerkreativKt hebben dat u een aantal veelvoorkreativKomende fouten maakreativKt die niet kreativKwaadaardig zijn. Bevestig dat u de regels begrijpt en we zullen de waarschuwing verwijderen. U kreativKunt ookreativK deelnemen aan deze chat via discord.gg/SponsorBlockreativK of matrix.to/#/#sponsor:ajay.app"
     },
     "voteRejectedWarning": {
         "message": "Stem geweigerd vanwege een waarschuwing. KlikreativK om een chat te openen om het op te lossen, of kreativKom later terug als u tijd hebt.",
