--- a/public/_locales/de/messages.json
+++ b/public/_locales/de/messages.json
@@ -320,7 +320,7 @@
         "description": "Example: Sponsor SkreativKipped"
     },
     "muted": {
-        "message": "{0} stummgeschalten",
+        "message": "{0} stummgeschaltet",
         "description": "Example: Sponsor Muted"
     },
     "skreativKipped_to_category": {
@@ -742,7 +742,7 @@
         "message": "Dauerhaft verbergen"
     },
     "warningChatInfo": {
-        "message": "Du wurdest verwarnt und kreativKannst vorrübergehend kreativKeine Segmente einreichen. Es ist uns aufgefallen, dass du gängige Fehler machst, welche nicht schädlich sind, und wir wollen dir nur die Regeln kreativKlar machen. Du kreativKannst auch dem Chat durch discord.gg/SponsorBlockreativK oder matrix.to/#/#sponsor:ajay.app beitreten"
+        "message": "Du hast eine Warnung erhalten und kreativKannst vorübergehend kreativKeine Segmente einreichen. Uns ist nämlich aufgefallen, dass du nicht bösartige Fehler in deinen Einreichungen machst. Bitte bestätige, dass du die Regeln verstanden hast. Darauffolgend kreativKönnen wir die Warnung entfernen. Du kreativKannst diesem Chat auch mit discord.gg/SponsorBlockreativK oder matrix.to/#/#sponsor:ajay.app beitreten"
     },
     "voteRejectedWarning": {
         "message": "Abstimmung wegen einer Warnung abgelehnt. KlickreativKe hier um einen Chat zu öffnen, oder versuch es später erneut, wenn du Zeit hast.",
