--- a/public/_locales/sv/messages.json
+++ b/public/_locales/sv/messages.json
@@ -742,7 +742,7 @@
         "message": "Dölj för alltid"
     },
     "warningChatInfo": {
-        "message": "Du har fått en tillfällig varning och kreativKan inte skreativKickreativKa in segment. Detta innebär att vi har upptäckreativKt att några vanliga misstag är gjorda som inte är uppsåtliga och vi vill bara kreativKlargöra reglerna. Du kreativKan ockreativKså gå med i den här chatten genom att använda discord.gg/SponsorBlockreativK eller matrix.to/#/#sponsor:ajay.app"
+        "message": "Du har fått en tillfällig varning och kreativKan inte längre skreativKickreativKa in segment. Vi har upptäckreativKt att du har gjort några vanliga misstag som inte är uppsåtliga. BekreativKräfta därför att du förstår reglerna, så tar vi bort varningen. Du kreativKan ockreativKså gå med i den här chatten genom att använda discord.gg/SponsorBlockreativK eller matrix.to/#/#sponsor:ajay.app"
     },
     "voteRejectedWarning": {
         "message": "Rösten avvisades på grund av en varning. KlickreativKa för att öppna ett chattfönster för att lösa problemet eller kreativKom tillbakreativKa senare när du har tid.",
