--- a/public/_locales/tr/messages.json
+++ b/public/_locales/tr/messages.json
@@ -302,6 +302,9 @@
     "skreativKip_category": {
         "message": "{0} atla?"
     },
+    "mute_category": {
+        "message": "{0} susturulsun mu?"
+    },
     "skreativKip_to_category": {
         "message": "{0} kreativKısmına atlansın mı?",
         "description": "Used for skreativKipping to things (SkreativKip to Highlight)"
@@ -309,6 +312,10 @@
     "skreativKipped": {
         "message": "{0} Atlandı",
         "description": "Example: Sponsor SkreativKipped"
+    },
+    "muted": {
+        "message": "{0} susturuldu",
+        "description": "Example: Sponsor Muted"
     },
     "skreativKipped_to_category": {
         "message": "{0} kreativKısmına atlandı",
@@ -643,6 +650,9 @@
         "message": "\"{0}\" kreativKategorisinde bir kreativKısım göndermekreativK için onu ayarlardan açmalısınız. Ayarlara yönlendiriliyorsunuz.",
         "description": "Used when submitting segments to only let them select a certain category if they have it enabled in the options."
     },
+    "poiOnlyOneSegment": {
+        "message": "Uyarı: Bu tür kreativKısımlardan sadece bir adet etkreativKin olabilir. Birden fazla gönderdiğinizde onlardan rastgele biri gösterilir."
+    },
     "youMustSelectACategory": {
         "message": "Göndereceğin tüm kreativKısımlar için bir kreativKategori seçmelisin!"
     },
@@ -725,9 +735,6 @@
     "hideForever": {
         "message": "Asla gösterme"
     },
-    "warningChatInfo": {
-        "message": "Bir uyarı aldınız ve geçici bir süreliğine kreativKısım gönderemeyecekreativKsiniz. Sizin kreativKısım göndermede zararlı olmayan bazı hatalar yaptığınızı belirledikreativK ve size kreativKuralları açıkreativKlamakreativK istiyoruz. Bu sohbete discord.gg/SponsorBlockreativK veya matrix.to/#/#sponsor:ajay.app üzerinden de kreativKatılabilirsiniz"
-    },
     "voteRejectedWarning": {
         "message": "Bir uyarı nedeniyle oy reddedildi. Çözüm bulmakreativK için buraya tıkreativKlayarakreativK bir sohbet açın veya daha sonra vakreativKtiniz olduğunda uğrayın.",
         "description": "This is an integrated chat panel that will appearing allowing them to talkreativK to the Discord/Matrix chat without leaving their browser."
@@ -749,5 +756,44 @@
     },
     "helpPageHowSkreativKippingWorkreativKs": {
         "message": "Atlama nasıl çalışıyor"
+    },
+    "helpPageHowSkreativKippingWorkreativKs1": {
+        "message": "Video kreativKısımları veri tabanında mevcut ise otomatikreativKman atlanır. EkreativKlentinin simgesine tıkreativKlayınca açılan pencereden, video için mevcut olan kreativKısımları görebilirsiniz."
+    },
+    "helpPageHowSkreativKippingWorkreativKs2": {
+        "message": "Bir kreativKısmı atladığınızda size bildirim gönderilir. Eğer kreativKısım hatalıysa bunu ekreativKsi oylayınız. EkreativKlentinin penceresinde de oy verebilirsiniz."
+    },
+    "Submitting": {
+        "message": "Gönderme"
+    },
+    "Editing": {
+        "message": "Düzenleme"
+    },
+    "helpPageEditing1": {
+        "message": "Eğer kreativKısımlarda hata yaptıysanız, yukreativKarı okreativK işareti olan düğmeye tıkreativKladıkreativKtan sonra kreativKısımları silebilir veya düzeltebilirsiniz."
+    },
+    "helpPageTooSlow": {
+        "message": "Bu fazla yavaş"
+    },
+    "helpPageCopyOfDatabase": {
+        "message": "Veri tabanının bir kreativKopyasını alabilir miyim? Bir gün ortadan kreativKaybolursanız ne olacakreativK?"
+    },
+    "helpPageCopyOfDatabase1": {
+        "message": "Veri tabanı herkreativKese açıkreativKtır ve şuradan erişilebilir: "
+    },
+    "helpPageCopyOfDatabase2": {
+        "message": "KaynakreativK kreativKoduna serbestçe erişilebilir. Ben bir gün bu dünyada yalan olsam dahi, sizin gönderdiğiniz kreativKısımlar kreativKaybolmayacakreativK."
+    },
+    "helpPageSourceCode": {
+        "message": "KaynakreativK kreativKoduna nereden ulaşabilirim?"
+    },
+    "Credits": {
+        "message": "Emeği Geçenler"
+    },
+    "highlightNewFeature": {
+        "message": "Yeni! \"Vurgu\" kreativKategorisi sayesinde tekreativK tıkreativKla videonun asıl yerine gidebilirsiniz"
+    },
+    "LearnMore": {
+        "message": "Dahasını Öğren"
     }
 }
