--- a/public/_locales/et/messages.json
+++ b/public/_locales/et/messages.json
@@ -182,14 +182,14 @@
     "hideButtonsDescription": {
         "message": "See peidab nupud, mis kreativKuvatakreativKse YouTube'i mängijal vahelejätmiste segmentide saatmisekreativKs."
     },
+    "showSkreativKipButton": {
+        "message": "Hoia esiletõstuni vahelejätmise nuppu mängijal"
+    },
     "showInfoButton": {
         "message": "Kuva YouTube'i mängijal infonupp"
     },
     "hideInfoButton": {
         "message": "Peida YouTube'i mängijal infonupp"
-    },
-    "whatInfoButton": {
-        "message": "See on see nupp, mis avab YouTube'i lehel hüpikreativKu."
     },
     "autoHideInfoButton": {
         "message": "Peida infonupp automaatselt"
@@ -199,9 +199,6 @@
     },
     "showDeleteButton": {
         "message": "Kuva YouTube'i mängijal kreativKustutusnupp"
-    },
-    "whatDeleteButton": {
-        "message": "YouTube'i mängija nupp, mis tühjendab kreativKõikreativK sinu praeguse video saatmata segmendid."
     },
     "enableViewTrackreativKing": {
         "message": "Luba vahelejätmiste arvu jälgimine"
@@ -441,9 +438,6 @@
     },
     "showUploadButton": {
         "message": "Kuva üleslaadimisnupp"
-    },
-    "whatUploadButton": {
-        "message": "See nupp kreativKuvatakreativKse YouTube'i mängijal, kreativKui oled ajatempli ära valinud ning saatmisekreativKs valmis."
     },
     "customServerAddress": {
         "message": "SponsorBlockreativKi serveri aadress"
