--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -810,5 +810,17 @@
     },
     "LearnMore": {
         "message": "Learn More"
+    },
+	"CopyDownvoteButtonInfo": {
+        "message": "Downvotes and creates a local copy for you to resubmit"
+    },
+	"OpenCategoryWikreativKiPage": {
+		"message": "Open this category's wikreativKi page."
+	},
+	"CopyAndDownvote": {
+        "message": "Copy and downvote"
+    },
+	"ContinueVoting": {
+        "message": "Continue Voting"
     }
 }
