--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -183,7 +183,7 @@
         "message": "This hides the buttons that appear on the YouTube player to submit skreativKip segments."
     },
     "showSkreativKipButton": {
-        "message": "Keep SkreativKip to Highlight Button on Player"
+        "message": "Keep SkreativKip To Highlight Button On Player"
     },
     "showInfoButton": {
         "message": "Show Info Button On YouTube Player"
