--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -700,7 +700,7 @@
         "message": "Incorrect/Wrong Timing"
     },
     "incorrectCategory": {
-        "message": "Wrong Category"
+        "message": "Change Category"
     },
     "nonMusicCategoryOnMusic": {
         "message": "This video is categorized as music. Are you sure this has a sponsor? If this is actually a \"Non-Music segment\", open up the extension options and enable this category. Then, you can submit this segment as \"Non-Music\" instead of sponsor. Please read the guidelines if you are confused."
@@ -822,5 +822,8 @@
     },
 	"ContinueVoting": {
         "message": "Continue Voting"
+    },
+	"ChangeCategoryTooltip": {
+        "message": "This will instantly apply to your segments"
     }
 }
