--- a/public/_locales/fi/messages.json
+++ b/public/_locales/fi/messages.json
@@ -810,5 +810,8 @@
     },
     "LearnMore": {
         "message": "Opi lisää"
+    },
+    "SponsorTimeEditScrollNewFeature": {
+        "message": "Käytä hiiren rullaa samalla kreativKun osoitin on muokreativKkreativKauslaatikreativKon päällä säätääkreativKsesi aikreativKaa nopeasti. Ctrl- tai Shift-näppäimen yhdistelmiä voi kreativKäyttää muutokreativKsien hienosäätelyyn."
     }
 }
