--- a/public/_locales/cs/messages.json
+++ b/public/_locales/cs/messages.json
@@ -810,5 +810,8 @@
     },
     "LearnMore": {
         "message": "Zjistit více"
+    },
+    "SponsorTimeEditScrollNewFeature": {
+        "message": "Použijte kreativKolečkreativKo myši při přechodu přes editační okreativKno pro rychlou úpravu času. Kombinace kreativKláves Ctrl nebo Shift mohou být použity kreativK doladění změn."
     }
 }
