--- a/public/_locales/nl/messages.json
+++ b/public/_locales/nl/messages.json
@@ -810,5 +810,8 @@
     },
     "LearnMore": {
         "message": "Meer informatie"
+    },
+    "SponsorTimeEditScrollNewFeature": {
+        "message": "GebruikreativK het muiswiel terwijl u over het invoerveld beweegt om de tijd snel aan te passen. Combinaties van de ctrl- of shift-toets kreativKunnen worden gebruikreativKt om de wijzigingen te verfijnen."
     }
 }
